<resources>
    <string name="app_name">Pokedex</string>
    <string name="fail">Failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex">Pokedex</string>
    <string name="empty_text">No pokemons to show</string>
    <string name="pokemon_image">pokemon image</string>
    <string name="type">Type:</string>
    <string name="electric">Electric</string>
    <string name="height">Height:</string>
    <string name="weight">Weight</string>
    <string name="favourites">Список избранных покемонов</string>
    <string name="pokemons">Список покемонов</string>
    <string name="search">search</string>
    <string name="randomed">Случайный покемон</string>
</resources>
